# aoc

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  go.mod  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
2020/01/: main.py
2020/02/: main.py
2020/03/: main.py
2020/04/: main.py
2020/05/: main.py
2020/06/: main.py
2020/08/: main.py
2020/09/: main.py
2021/01/: main.py
2021/02/: main.py
2021/03/: main.py
2021/04/: main.py
2021/05/: main.py
2021/06/: main.py
2021/07/: main.py
2021/08/: main.py
2021/09/: main.py
2021/10/: main.py
2021/11/: main.py
2022/01/: main.go  main_test.go
2022/02/: main.go  main_test.go
2022/03/: main.go  main_test.go
2022/04/: main.go  main.py  main_test.go
2022/05/: main.go  main_test.go
2022/06/: main.go  main_test.go
2022/07/: main.go  main_test.go
2022/08/: main.go  main_test.go
2022/09/: main.go  main_test.go
2022/10/: main.go  main_test.go
2022/11/: main.py
aoc/: __init__.py  __main__.py  _typing.py  _utils.py  app.py  cli.py  db.py  io.py  runner.py
aoc/2020/src/: day_01.py  day_02.py  day_03.py  day_04.py
aoc/2020/test/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py
aoc/abstracts/: solver.py
aoc/templates/: part_one.py.j2  part_two.py.j2  solver.py.j2
aoc/tests/: test_app.py
aoc/tests/year_2020/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_09.py
aoc/year_2020/: __init__.py
aoc/year_2020/day_01/: __init__.py  part_one.py  part_two.py  solver.py
aoc/year_2020/day_02/: __init__.py  extract.py  part_one.py  part_two.py  solver.py
aoc/year_2020/day_03/: __init__.py  move.py  part_one.py  part_two.py  solver.py
aoc/year_2020/day_04/: __init__.py  cleaner.py  part_one.py  part_two.py  solver.py  validator.py
aoc/year_2020/day_05/: __init__.py  finder.py  part_one.py  part_two.py  solver.py
aoc/year_2020/day_06/: __init__.py  part_one.py  part_two.py  solver.py
aoc/year_2020/day_08/: __init__.py  accumulate.py  parse.py  part_one.py  part_two.py  solver.py
internal/util/: cast.go  io.go  math.go  ops.go  ops_test.go  sets.go  types.go
scripts/: generate_day.sh
tests/: conftest.py  test_app.py  test_cli.py  test_io.py  test_year_2020.py  test_year_2021.py
tests/year_2020/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_08.py  test_day_09.py
(+23 files in other folders)
