[tool.poetry]
name = "aoc"
version = "0.2.0"
description = "Advent of Code Solutions"
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aoc"
disallow_untyped_defs = true
disallow_incomplete_defs = true
